# skype2gmail2019

./: .gitignore  Readme.md  config.py.dist  pyproject.toml  skype2gmail.py  test.py
clients/: gmail_client.py
templates/: body.j2
