[tool.poetry]
name = "190905-slack2gmail"
version = "0.1.0"
description = ""
authors = ["Silvan Muehlemann <silvan.muehlemann@muehlemann-popp.ch>"]

[tool.poetry.dependencies]
python = "^3.6"
google-api-python-client = "^1.7"
jinja2 = "^2.10"
oauth2client = "^4.1"
pytz = "^2019.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
